syntax = "proto3";

import "common_domain.proto";
import "google/protobuf/timestamp.proto";

package app.improving.organizationcontext;

enum OrganizationStatus {
    ORGANIZATION_STATUS_DRAFT = 0;
    ORGANIZATION_STATUS_ACTIVE = 1;
    ORGANIZATION_STATUS_SUSPENDED = 2;
    ORGANIZATION_STATUS_RELEASED = 3;
    ORGANIZATION_STATUS_TERMINATED = 4;
}


message Contacts {
    repeated MemberId primary_contacts = 1;
    repeated MemberId billing_contacts = 2;
    repeated MemberId distribution_contacts = 3;
}

message ContactList {
    repeated Contacts contacts = 1;
}

message Info {
    string name = 1;
    optional string short_name = 2;
    Address address = 3;
    bool isPrivate = 4;
    optional string url = 5; // URL type?
    optional string logo = 6; // URL type?
    TenantId tenant = 7;
}

message MemberList {
    repeated MemberId member_id = 1;
}

message MetaInfo {
    google.protobuf.Timestamp created_on = 1;
    MemberId created_by = 2;
    google.protobuf.Timestamp last_updated = 3;
    MemberId last_updated_by = 4;
    OrganizationStatus current_status = 5;
    repeated OrganizationId children = 6;
}

message Parent {
    OrganizationId org_id = 1;
}

message OwnerList {
    repeated MemberId owners = 1;
}

message PublicOrganizationEvent {

}

message UpdateInfo {
    optional string name = 1;
    optional string short_name = 2;
    Address address = 3;
    optional bool is_private = 4;
    optional string url = 5; // URL type?
    optional string logo = 6; // URL type?
    TenantId tenant = 7;
}

message FindOrganizationsByMember {
    MemberId member = 1;
}

message FindOrganizationsByOwner {
    MemberId owner = 1;
}

message GetOrganizationInfo {
    OrganizationId org_id = 1;
}

message MembersAddedToOrganization {
    OrganizationId org_id = 1;
    repeated MemberId new_members = 2;
    MetaInfo meta = 3;
}

message MembersRemovedFromOrganization {
    OrganizationId org_id = 1;
    repeated MemberId removed_members = 2;
    MetaInfo meta = 3;
}

message OrganizationAccountsUpdated {
    OrganizationId org_id = 1;
    Info info = 2;
    MetaInfo meta = 3;
}

message OrganizationContactsUpdated {
    OrganizationId org_id = 1;
    repeated Contacts contacts = 2;
    MetaInfo meta = 3;
}

message OrganizationEstablished {
    OrganizationId org_id = 1;
    Info info = 2;
    Parent parent = 3;
    MemberList members = 4;
    OwnerList owners = 5;
    ContactList contacts = 6;
    MetaInfo meta = 7;
}

message OrganizationInfo {
    OrganizationId org_id = 1;
    Info info = 2;
}

message OrganizationInfoUpdated {
    OrganizationId org_id = 1;
    Info info = 2;
    MetaInfo meta = 3;
}

message OrganizationListByMember {
    MemberId member = 1;
    repeated OrganizationId organizations = 2;
}

message OrganizationListByOwner {
    MemberId owner = 1;
    repeated OrganizationId organizations = 2;
}

message OrganizationStatusUpdated {
    OrganizationId orgId = 1;
    OrganizationStatus newStatus = 2;
    MetaInfo meta = 3;
}

message OrganizationReleased {
    OrganizationId org_id = 1;
    MetaInfo meta = 2;
}

message OwnersAddedToOrganization {
    OrganizationId org_id = 1;
    repeated MemberId new_owners = 2;
    MetaInfo meta = 3;
}

message OwnersRemovedFromOrganization {
    OrganizationId org_id = 1;
    repeated MemberId removed_owners = 2;
    MetaInfo meta = 3;
}

message ParentUpdated {
    OrganizationId org_id = 1;
    OrganizationId new_parent = 2;
    MetaInfo meta = 3;
}
